--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,10 @@
       {%- if site.data.education.size > 0 -%}
         {%- include education.html -%}
       {%- endif -%}
+     
+      {%- if site.data.awards.size > 0 -%}
+        {%- include education.html -%}
+      {%- endif -%}
 
       {%- if site.more_content -%}
         {%- include more.html -%}
