--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
       {%- endif -%}
      
       {%- if site.data.awards.size > 0 -%}
-        {%- include education.html -%}
+        {%- include awards.html -%}
       {%- endif -%}
 
       {%- if site.more_content -%}
