--- a/_includes/awards.html
+++ b/_includes/awards.html
@@ -1,6 +1,6 @@
-<div class="container education-container">
-  <h3>{{ site.education_title | default: "Education" }}</h3>
-  {% for education in site.data.education %}
-    {% include {{ education.layout | default: 'left' | append: ".html" }} item=education %}
+<div class="container awards-container">
+  <h3>{{ site.awards_title | default: "Awards" }}</h3>
+  {% for awards in site.data.awards %}
+    {% include {{ awards.layout | default: 'left' | append: ".html" }} item=awards %}
   {% endfor %}
 </div>
