--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,21 +11,25 @@
     <div class="wrapper">
 
       {%- include about.html -%}
+      
+      {%- if site.data.education.size > 0 -%}
+        {%- include education.html -%}
+      {%- endif -%}
+      
+      {%- if site.data.experience.size > 0 -%}
+        {%- include experience.html -%}
+      {%- endif -%}
 
       {%- if site.data.projects.size > 0 -%}
         {%- include projects.html -%}
       {%- endif -%}
 
-      {%- if site.data.experience.size > 0 -%}
-        {%- include experience.html -%}
+      {%- if site.data.certifications.size > 0 -%}
+        {%- include certifications.html -%}
       {%- endif -%}
-
-      {%- if site.data.education.size > 0 -%}
-        {%- include education.html -%}
-      {%- endif -%}
-     
-      {%- if site.data.awards.size > 0 -%}
-        {%- include awards.html -%}
+      
+      {%- if site.data.volunteering.size > 0 -%}
+        {%- include volunteering.html -%}
       {%- endif -%}
 
       {%- if site.more_content -%}
